<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.medicalstore.app.presentation.screens.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    
    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.medicalstore.app.presentation.screens.categories.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" />
    
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.medicalstore.app.presentation.screens.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />
    
    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.medicalstore.app.presentation.screens.orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />
    
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.medicalstore.app.presentation.screens.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
